manifests/envs/prod/web-front-admision-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-prod-front-admision
spec:
  selector:
    matchLabels:
      app: web-prod-front-admision
  template:
    metadata:
      labels:
        app: web-prod-front-admision
    spec:
      containers:
      - name: web-prod-front-admision
        image: imagen         
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests: 
            cpu: 250m
            memory: 64Mi
          limits: 
            cpu: 500m
            memory: 512Mi
      imagePullSecrets:
      - name: regcred-crdesacontainer
