manifests/envs/prod/web-front-admision-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-prod-front-admision-ingress
  annotations:
       nginx.ingress.kubernetes.io/enable-cors: "true"
       nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
       nginx.ingress.kubernetes.io/configuration-snippet: |
          more_set_headers "Access-Control-Allow-Origin: $http_origin";
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt
       nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
      - prod.salud.achs.cl
      secretName: admision-web-cert
  rules:
  - host: prod.salud.achs.cl 
    http:
      paths:
      - path: /web-admision(/?.*)
        backend:
          serviceName: web-prod-front-admision-service
          servicePort: 80
      - path: /web-firmadigital(/?.*)
        backend:
          serviceName: web-prod-front-firmadigital-service
          servicePort: 80
      - path: /web-firmadigital-totem(/?.*)
        backend:
          serviceName: web-prod-front-firmadigital-totem-service
          servicePort: 80             
      - path: /web-digitalizador-documentos(/?.*)
        backend:
          serviceName: web-prod-front-digitalizaciondocumentos-service
          servicePort: 80
